Introduce new notification types for messages received in group chats

Removed highlight notification type for 1-to-1 chats. There are now the
following 6 notification types for received messages:
* 1-to-1 chat message received (active/inactive window)
* Group chat highlight received (active/inactive window)
* Group chat message received (active/inactive window)

BUG: 289348
REVIEW: 113134